--- a/DoneList/Base.lproj/Main.storyboard
+++ b/DoneList/Base.lproj/Main.storyboard
@@ -1,24 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sjN-Xb-dLU">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Done List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DoneList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xN6-JS-OI0">
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xN6-JS-OI0" secondAttribute="trailing" id="1Xp-kg-e3j"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xN6-JS-OI0" secondAttribute="bottom" id="1yr-75-FJy"/>
+                            <constraint firstItem="xN6-JS-OI0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3PH-k1-vSf"/>
+                            <constraint firstItem="xN6-JS-OI0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9pD-zc-ob2"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Done List" id="jBE-F7-zkS">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="hRa-hv-rim">
+                            <connections>
+                                <action selector="didTapAddButton" destination="BYZ-38-t0r" id="aTZ-Kc-elT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="table" destination="xN6-JS-OI0" id="gc5-v3-txR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="921.73913043478262" y="136.60714285714286"/>
+        </scene>
+        <!--Entry View Controller-->
+        <scene sceneID="KZc-wB-ZSy">
+            <objects>
+                <viewController storyboardIdentifier="enter" id="RUR-Qg-4bv" customClass="EntryViewController" customModule="DoneList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lY5-tg-uaR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjk-5F-ByB">
+                                <rect key="frame" x="20" y="54" width="374" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="Bmc-V5-0J0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="1kP-C5-2k5">
+                                <rect key="frame" x="0.0" y="131" width="414" height="731"/>
+                                <locale key="locale" localeIdentifier="ko"/>
+                            </datePicker>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3AE-01-rNh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Cjk-5F-ByB" firstAttribute="top" secondItem="3AE-01-rNh" secondAttribute="top" constant="10" id="1Gt-J1-ka0"/>
+                            <constraint firstItem="1kP-C5-2k5" firstAttribute="top" secondItem="Cjk-5F-ByB" secondAttribute="bottom" constant="25" id="TQn-P9-Sfo"/>
+                            <constraint firstItem="1kP-C5-2k5" firstAttribute="trailing" secondItem="3AE-01-rNh" secondAttribute="trailing" id="ZMO-cc-j35"/>
+                            <constraint firstItem="Cjk-5F-ByB" firstAttribute="leading" secondItem="3AE-01-rNh" secondAttribute="leading" constant="20" id="e4q-4J-hH5"/>
+                            <constraint firstItem="3AE-01-rNh" firstAttribute="bottom" secondItem="1kP-C5-2k5" secondAttribute="bottom" id="eGS-vN-s1M"/>
+                            <constraint firstItem="1kP-C5-2k5" firstAttribute="leading" secondItem="3AE-01-rNh" secondAttribute="leading" id="gaB-xj-VG2"/>
+                            <constraint firstItem="3AE-01-rNh" firstAttribute="trailing" secondItem="Cjk-5F-ByB" secondAttribute="trailing" constant="20" id="gcu-SR-3ns"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="datePicker" destination="1kP-C5-2k5" id="5CN-GZ-cz2"/>
+                        <outlet property="textField" destination="Cjk-5F-ByB" id="2Jr-gz-Ccd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WeF-mY-q3H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1632" y="153"/>
+        </scene>
+        <!--View View Controller-->
+        <scene sceneID="RXF-9j-6eL">
+            <objects>
+                <viewController storyboardIdentifier="view" id="RNh-UZ-QTe" customClass="ViewViewController" customModule="DoneList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cad-XW-wTt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3c-7L-EBW">
+                                <rect key="frame" x="20" y="64" width="374" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="byb-lm-1gI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mo-Lc-IoO">
+                                <rect key="frame" x="20" y="154" width="374" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="G9n-os-E2Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="wJL-XZ-7Kp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9Mo-Lc-IoO" firstAttribute="leading" secondItem="wJL-XZ-7Kp" secondAttribute="leading" constant="20" id="7aJ-uc-33d"/>
+                            <constraint firstItem="J3c-7L-EBW" firstAttribute="leading" secondItem="wJL-XZ-7Kp" secondAttribute="leading" constant="20" id="A4g-gN-cG8"/>
+                            <constraint firstItem="wJL-XZ-7Kp" firstAttribute="trailing" secondItem="9Mo-Lc-IoO" secondAttribute="trailing" constant="20" id="R3e-pM-DnQ"/>
+                            <constraint firstItem="J3c-7L-EBW" firstAttribute="top" secondItem="wJL-XZ-7Kp" secondAttribute="top" constant="20" id="f4D-FB-ZH5"/>
+                            <constraint firstItem="wJL-XZ-7Kp" firstAttribute="trailing" secondItem="J3c-7L-EBW" secondAttribute="trailing" constant="20" id="qmA-nh-ggx"/>
+                            <constraint firstItem="9Mo-Lc-IoO" firstAttribute="top" secondItem="J3c-7L-EBW" secondAttribute="bottom" constant="20" id="vtO-UN-ESL"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="dateLabel" destination="9Mo-Lc-IoO" id="Sab-uA-U0n"/>
+                        <outlet property="itemLabel" destination="J3c-7L-EBW" id="fw2-K7-E2a"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IFc-rE-sFb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2322" y="153"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="OTb-8c-deK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sjN-Xb-dLU" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="juX-N4-Q9w">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="K8a-YT-Wh9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kpw-4w-g93" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="11.594202898550726" y="136.60714285714286"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
